<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/transparent_prevention"

        android:scaleType="fitXY"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textColor="@color/welcomeColor"
        android:textAlignment="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thatWill"
        android:textSize="22sp"
        android:textColor="@color/thatWill"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coronaVirus"
        android:textSize="25sp"
        android:textColor="@color/coronaVirus"
        android:textAlignment="center"
        />
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/welcomeColor"
        android:progressBackgroundTint="@color/thatWill"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/startChat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startChat"
            android:layout_gravity="center"
            android:textSize="27sp"
            android:textColor="#ffff"
            android:background="@drawable/rectangle"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            />

    </RelativeLayout>

</LinearLayout>